# C-Basic-HomeWork

./: .gitignore  BT TrenLop.c  Bai5TT.c  CMakeLists.txt  Dssv.txt  KhA_PaNk.c  README.md  matran.txt  matran1.txt
BT Con Tro/: Bai 1.c  Bai 2.c  Bai 3.c
BT DSLK/: Bai 1.c  Bai 2.c  Bai 4.c
BT Ham/: Bai 1.c  Bai 2.c  Bai 3.c  Bai 4.c
BT Mang 12 Chieu/: Bai 1.c  Bai 10.c  Bai 11.c  Bai 2.c  Bai 3.c  Bai 4.c  Bai 5.c  Bai 6.c  Bai 7.c  Bai 8 & 9.c  test.c
BT Struct & Chuoi/: Bai 11.c  Bai 12.c  Bai 13.c  Bai 14.c  Bai 15.c  Bai 16.c  Bai 17.c  Bai 2.c  Bai 20.c  Bai 22.c  Bai 23.c  Bai 26.c  Bai 4.c  Bai 5.c  Bai 7.c  BÀI TẬP VỀ CHUỖI VÀ STRUCT.docx
BT Tep Tin/: Bai 1.2.c  Bai 1.c  Bai 2.c  Bai 5.c  Bai 6.c  Bai 7.c  Cau 1.c  Cau 2.c  Dssv.txt
BT Thuc Hanh 2/: Bai 1.c  Bai 16.c  Bai 4.c  Bai 5.c  Bai 7.c
Day 1/: Bai 1.c  Bai 2.c  Bai 3.c
Day 2/: Bai 10.c  Bai 1a.c  Bai 1b.c  Bai 2.c  Bai 3.c  Bai 4.c  Bai 5.c  Bai 6.c  Bai 7b.c  Bai 8.c  Bai 9.c
Day 3/: BT chuoi tren lop.c
On THi/: DSLB_b11.c  DSLK.c  DocGhiMatran.c  Giai He PT.c  Giai PT Bac 2.c  Giai PT Bac 4.c  MA_TRAN.txt  Matranxoanoc.c  Nhan2MaTran.c  test.c
