cmake_minimum_required(VERSION 3.17)
project(C C)

set(CMAKE_C_STANDARD 11)

add_executable(C
        "BT Con Tro/Bai 1.c"
        "BT Con Tro/Bai 2.c"
        "BT Con Tro/Bai 3.c"
        "BT Ham/Bai 1.c"
        "BT Ham/Bai 2.c"
        "BT Ham/Bai 3.c"
        "BT Ham/Bai 4.c"
        "BT Mang 12 Chieu/Bai 1.c"
        "BT Mang 12 Chieu/Bai 10.c"
        "BT Mang 12 Chieu/Bai 11.c"
        "BT Mang 12 Chieu/Bai 2.c"
        "BT Mang 12 Chieu/Bai 3.c"
        "BT Mang 12 Chieu/Bai 4.c"
        "BT Mang 12 Chieu/Bai 5.c"
        "BT Mang 12 Chieu/Bai 6.c"
        "BT Mang 12 Chieu/Bai 7.c"
        "BT Mang 12 Chieu/Bai 8 & 9.c"
        "BT Struct & Chuoi/Bai 11.c"
        "BT Struct & Chuoi/Bai 12.c"
        "BT Struct & Chuoi/Bai 13.c"
        "BT Struct & Chuoi/Bai 14.c"
        "BT Struct & Chuoi/Bai 15.c"
        "BT Struct & Chuoi/Bai 16.c"
        "BT Struct & Chuoi/Bai 17.c"
        "BT Struct & Chuoi/Bai 2.c"
        "BT Struct & Chuoi/Bai 20.c"
        "BT Struct & Chuoi/Bai 22.c"
        "BT Struct & Chuoi/Bai 23.c"
        "BT Struct & Chuoi/Bai 26.c"
        "BT Struct & Chuoi/Bai 4.c"
        "BT Struct & Chuoi/Bai 5.c"
        "BT Struct & Chuoi/Bai 7.c"
        "BT Thuc Hanh 2/Bai 1.c"
        "BT Thuc Hanh 2/Bai 16.c"
        "BT Thuc Hanh 2/Bai 4.c"
        "BT Thuc Hanh 2/Bai 5.c"
        "BT Thuc Hanh 2/Bai 7.c"
        "Day 1/Bai 1.c"
        "Day 1/Bai 2.c"
        "Day 1/Bai 3.c"
        "Day 2/Bai 10.c"
        "Day 2/Bai 1a.c"
        "Day 2/Bai 1b.c"
        "Day 2/Bai 2.c"
        "Day 2/Bai 3.c"
        "Day 2/Bai 4.c"
        "Day 2/Bai 5.c"
        "Day 2/Bai 6.c"
        "Day 2/Bai 7b.c"
        "Day 2/Bai 8.c"
        "Day 2/Bai 9.c"
        "Day 3/BT chuoi tren lop.c"
        KhA_PaNk.c)
